Fix clippy-bubble

--- a/src/clippy.css
+++ b/src/clippy.css
@@ -41,6 +41,19 @@
     left: 125px;
 }
 
+.clippy-bubble::after {
+    content: "";
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 8px 0 8px;
+    border-color: #FFFFCD transparent transparent transparent;
+    position: absolute;
+    bottom: -10px;
+    left: 124px;
+    z-index: -1;
+}
+
 .clippy {
     display: flex;
     width: 124px;
